--- a/project/.github/workflows/techtrends-dockerhub.yml
+++ b/project/.github/workflows/techtrends-dockerhub.yml
@@ -27,5 +27,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tag: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
 
