--- a/project/.github/workflows/techtrends-dockerhub.yml
+++ b/project/.github/workflows/techtrends-dockerhub.yml
@@ -5,7 +5,7 @@ name: TechTrends - Package with Docker
       - 'main'
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       -
         name: Checkout
