--- a/project/.github/workflows/techtrends-dockerhub.yml
+++ b/project/.github/workflows/techtrends-dockerhub.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       -
@@ -27,5 +30,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tag: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
 
