--- a/project/.github/workflows/techtrends-dockerhub.yml
+++ b/project/.github/workflows/techtrends-dockerhub.yml
@@ -1,5 +1,5 @@
 name: TechTrends - Package with Docker
-  on:
+on:
   push:
     branches:
       - 'main'
@@ -26,7 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./project
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
