--- a/project/helm/templates/deploy.yaml
+++ b/project/helm/templates/deploy.yaml
@@ -30,14 +30,14 @@ spec:
               cpu: {{ .Values.resources.limits.cpu }}
               memory: {{ .Values.resources.limits.memory }}
           ports:
-            - containerPort: {{ .Values.resources.containerPort | quote }}
+            - containerPort: {{ .Values.resources.containerPort }}
           livenessProbe:
             httpGet:
               path: {{ .Values.resources.livenessProbe.path }}
-              port: {{ .Values.resources.containerPort | quote }}
+              port: {{ .Values.resources.containerPort }}
           readinessProbe:
             httpGet:
               path: {{ .Values.resources.readinessProbe.path }}
-              port: {{ .Values.resources.containerPort | quote }}
+              port: {{ .Values.resources.containerPort }}
 status: {}
 
