--- a/project/helm/values.yaml
+++ b/project/helm/values.yaml
@@ -34,9 +34,10 @@ resources:
 
   livenessProbe:
     path: /healthz
-
+    port: 3111
   readinessProbe:
     path: /healthz
+    port: 3111
 
 nodeSelector: {}
 
